Fixed layout issue on comments

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -147,4 +147,8 @@
 #disqus_thread {
     width: 100%;
     padding-left: 200px;
+
+    @include media-breakpoint-down(sm) {
+        padding-left: 0;
+    }
 }
